src/assets/scss/layouts/_header.scss
/* ... */
.search-overlay {
  position: fixed;
  z-index: 999999;
  top: 0;
  left: 0;

  width: 100%;
  height: 100vh;

  transition: 0.6s;
  transform: translate3d(100%, 0, 0);

  background-color: $white;

  &.active {
    transform: translate3d(0, 0, 0);
  }

  &__close-icon {
    font-size: 60px;

    position: absolute;
    top: 30px;
    right: 30px;

    padding: 0;

    transition: 0.6s;

    color: $black--two;
    border: none;
    background: none;

    &:hover {
      transform: rotate(90deg);
    }
  }

  &__content {
    position: absolute;
    top: 50%;
    left: 50%;

    transform: translate(-50%, -50%);

    form {
      input {
        font-size: 67px;

        border: none;
        border-bottom: 2px solid $black--two;
        background: none;

        @include respond(extra-large-mobile) {
          font-size: 40px;
        }

        @include respond(large-mobile) {
          font-size: 40px;
        }

        @include respond(small-mobile) {
          font-size: 30px;
        }

        @include respond(extra-small-mobile) {
          font-size: 20px;
        }
      }

      ::placeholder {
        opacity: 1;
        /* Firefox */

        /* Chrome, Firefox, Opera, Safari 10.1+ */
        color: $grey--nine;
      }

      :-ms-input-placeholder {
        /* Internet Explorer 10-11 */
        color: $grey--nine;
      }

      ::-ms-input-placeholder {
        /* Microsoft Edge */
        color: $grey--nine;
      }
    }
  }
}
/* ... */

